updates with images and maps js stuff

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,11 @@ layout: default
 scripts:
 - /js/maps.js
 ---
+<!--
 <script>
-$(document).ready(load_map_script);
+$(document).ready(world_map_init);
 </script>
 
 <div id="world_map_canvas"></div>
+-->
 {{content}}
