--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,17 @@
 	<head>
 		<title>{{page.title}}</title>
 		<link rel="stylesheet" href="/css/site.css"/>
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=US"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 		{% for script in page.scripts %}
 		<script type="text/javascript" src="{{ script }}"></script>
 		{% endfor %}
 	</head>
 	<body>
+		<div class="header">
+			<img id="sitelogo" src="/images/logo.png"/>
+			<img id="ourtravels" src="/images/ourtravels.png"/>
+		</div>
 		{{content}}
 	</body>
 </html>
