updated a buncha stuff with the world map

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,16 @@
 	</head>
 	<body>
 		<div class="header">
-			<img id="sitelogo" src="/images/logo.png"/>
-			<img id="ourtravels" src="/images/ourtravels.png"/>
+			<a href="/">
+				<img id="sitelogo" src="/images/logo.png"/>
+				<img id="ourtravels" src="/images/ourtravels.png"/>
+			</a>
+			<ul class="navlinks">
+				<li><a href="">Trips</a></li>
+				<li><a href="">Photos</a></li>
+				<li><a href="/map.html">Map</a></li>
+				<li><a href="/about.html">About</a></li>
+			</ul>
 		</div>
 		{{content}}
 	</body>
