--- a/_layouts/world_map.html
+++ b/_layouts/world_map.html
@@ -1,11 +1,27 @@
----
-layout: default
----
-<!--
-<script>
-$(document).ready(world_map_init);
-</script>
-
-<div id="world_map_canvas"></div>
--->
+<html>
+	<head>
+		<title>{{page.title}}</title>
+		<link rel="stylesheet" href="/css/site.css"/>
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=US"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script type="text/javascript" src="/js/maps.js"></script>
+		<script>
+			$(document).ready(world_map_init);
+		</script>
+	</head>
+	<body class="map">
+		<div class="header">
+			<a href="/">
+				<img id="sitelogo" src="/images/logo.png"/>
+			</a>
+		</div>
+		<ul class="navlinks">
+			<li><a href="">Trips</a></li>
+			<li><a href="">Photos</a></li>
+			<li><a href="/map.html">Map</a></li>
+			<li><a href="/about.html">About</a></li>
+		</ul>
+		<div id="world_map_canvas"></div>
+	</body>
+</html>
 {{content}}
