--- a/css/site.css
+++ b/css/site.css
@@ -18,7 +18,7 @@ body.map ul.navlinks {
 	/*display: none;*/
 	position: absolute;
 	top: 23;
-	left: 85;
+	left: 80;
 	margin: 0;
 	padding: 7px;
 	padding-left: 25px;
@@ -30,6 +30,10 @@ body.map ul.navlinks {
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
+
+	-moz-box-shadow: 0px 0px 7px #000;
+	-webkit-box-shadow: 0px 0px 7px #000;
+	box-shadow: 0px 0px 7px #000;
 	
 }
 body.map div.header {
