--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
 		<div class="header">
 			<a href="/">
 				<img id="sitelogo" src="/images/logo.png"/>
-				<img id="ourtravels" src="/images/ourtravels.png"/>
 			</a>
+			<span class="quote">"A journey is best measured in friends, rather than miles" <span> - Tim Cahill</span></span>
 			<ul class="navlinks">
 				<li><a href="">Trips</a></li>
 				<li><a href="">Photos</a></li>
@@ -21,6 +21,9 @@
 				<li><a href="/about.html">About</a></li>
 			</ul>
 		</div>
-		{{content}}
+
+		<div class="pagecontent">
+			{{content}}
+		</div>
 	</body>
 </html>
