--- a/css/site.css
+++ b/css/site.css
@@ -3,59 +3,18 @@ body {
 	background-color: #1f1f21;
 	width: 900px;
 	margin: 0 auto;
-	padding-top: 35px;
+	padding-top: 15px;
 	font: 16px Trebuchet, sans-serif;
 	color: #ddd;
 }
 
-/* World Map Stuff */
-body.map {
-	background: #1f1f21;
-	margin: 0;
-	padding: 0;
+img {
+	border: 0;
 }
-body.map ul.navlinks {
-	/*display: none;*/
-	position: absolute;
-	top: 23;
-	left: 80;
-	margin: 0;
-	padding: 7px;
-	padding-left: 25px;
-	overflow: hidden;
-	background-color: #1f1f21;
-	float: left;
-	z-index: 2;
-	
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
 
-	-moz-box-shadow: 0px 0px 7px #000;
-	-webkit-box-shadow: 0px 0px 7px #000;
-	box-shadow: 0px 0px 7px #000;
-	
+img.sitelogo {
+	z-index: 6;
 }
-body.map div.header {
-	position: absolute;
-	overflow: hidden;
-	z-index: 3;
-	padding: 3px 0px 0px 3px;
-	border-bottom: none;
-}
-body.map div.header img.sitelogo {
-	z-index: 3;
-}
-#world_map_canvas{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -1;
-}
-/* End World Map Stuff */
-
 h2 {
 	font-size: 20px;
 }
@@ -69,28 +28,52 @@ a:hover {
 	color: #bfb384;
 	color: #bfa384;
 }
-
-#ourtravels {
-	padding-bottom: 25px;
-	padding-left: 10px;
+/* Site Header */
+div.header {
+	z-index: 3;
+	position: relative;
+	width: 900px;
+	margin-bottom: 20px;
 }
-
+div.header span.quote {
+	/*display: none;*/
+	position: absolute;
+	top: 43;
+	left: 102;
+	font-size: 14px;
+	font-style: italic;
+	font-weight: bold;
+}
+span.quote span {
+	color: #3f3f43
+}
 ul.navlinks {
-	margin-top: 45px;
-	float: right;
+	position: absolute;
+	background-color: #1f1f21;
+	z-index: -1;
+	padding: 7px 7px 7px 25px;
+	top: -12;
+	left: 80;
 	list-style-type: none;
+	
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+
+	-moz-box-shadow: 0px 0px 10px #000;
+	-webkit-box-shadow: 0px 0px 10px #000;
+	box-shadow: 0px 0px 10px #000;
 }
 ul.navlinks li {
 	float: left;
 	margin-right: 20px;
 }
+/* End Site Header */
 
-div.header {
-	margin-bottom: 20px;
-	padding-bottom: 5px;
-	border-bottom: 3px solid #333;
+
+body div.pagecontent {
+	/*padding-top: 90px;*/
 }
-
 div.post {
 	clear: both;
 }
@@ -122,22 +105,47 @@ div.post div.data div.bw:hover {
 	background: url('/images/earth-small.png') no-repeat;
 }
 
+
+/* Post map */
 div.day_map {
 	width: 100%;
 	height: 300px;
 }
+/* End Post Map */
 
-a.mask img {
+
+/* World Map */
+body.map {
+	background: #1f1f21;
+	margin: 0;
+	padding: 0;
 }
-div.post div.content a.mask {
-	position: relative;
-	display: block;
+body.map ul.navlinks {
+	position: absolute;
+	top: 8;
+	left: 80;
+	margin: 0;
+	padding: 7px;
+	padding-left: 25px;
 	overflow: hidden;
+	background-color: #1f1f21;
+	float: left;
+	z-index: -1;
 }
-a.mask div {
-	margin: 0px;
-	cursor: pointer;
-	height: 440px;
-	width: 654px;
-	background: transparent url('/images/maskmed.png') no-repeat;
+body.map div.header {
+	position: absolute;
+	top: 5px;
+	overflow: hidden;
+	z-index: 3;
+	padding: 3px 0px 0px 3px;
+	border-bottom: none;
 }
+#world_map_canvas{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+/* End World Map */
