--- a/css/site.css
+++ b/css/site.css
@@ -60,9 +60,9 @@ ul.navlinks {
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 
-	-moz-box-shadow: 0px 0px 10px #000;
-	-webkit-box-shadow: 0px 0px 10px #000;
-	box-shadow: 0px 0px 10px #000;
+	-moz-box-shadow: 0px 0px 10px #111;
+	-webkit-box-shadow: 0px 0px 10px #111;
+	box-shadow: 0px 0px 10px #111;
 }
 ul.navlinks li {
 	float: left;
@@ -120,6 +120,7 @@ div.pagination {
 	margin-right: auto;
 	font: 12px;
 	font-weight: bold;
+	color: #ff7500;
 }
 div.pagination a {
 	color: #777;
