--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 	<head>
 		<title>{{page.title}}</title>
 		<link rel="stylesheet" href="/css/site.css"/>
+		<link rel="stylesheet" href="/css/jquery.lightbox-0.5.css"/>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=US"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script type="text/javascript" src="/js/jquery.lightbox-0.5.pack.js"></script>
 		{% for script in page.scripts %}
 		<script type="text/javascript" src="{{ script }}"></script>
 		{% endfor %}
@@ -13,17 +17,17 @@
 			<a href="/">
 				<img id="sitelogo" src="/images/logo.png"/>
 			</a>
-			<span class="quote">"A journey is best measured in friends, rather than miles" <span> - Tim Cahill</span></span>
 			<ul class="navlinks">
 				<li><a href="">Trips</a></li>
 				<li><a href="">Photos</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="/about.html">About</a></li>
 			</ul>
+			<span class="quote">"A journey is best measured in friends, rather than miles" <span> - Tim Cahill</span></span>
 		</div>
-
 		<div class="pagecontent">
 			{{content}}
 		</div>
+		<div class="footer">&nbsp;</div>
 	</body>
 </html>
