--- a/css/site.css
+++ b/css/site.css
@@ -9,7 +9,7 @@ body {
 }
 
 img {
-	border: 0;
+	border: 0px;
 }
 
 div.pagecontent img {
@@ -125,9 +125,13 @@ body div.pagecontent {
 div.post {
 	clear: both;
 }
+div.post h2 {
+	font-size: 22px;
+	color: #ffad33;
+}
 div.post h2 a {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 	font-size: 22px;
 	color: #8ae5b8;
 	color: #2db259;
@@ -179,8 +183,21 @@ div.post div.data div.bw:hover {
 	background: url('/images/earth-small.png') no-repeat;
 }
 div.day_map {
+	margin-top: 30px;
 	width: 100%;
-	height: 300px;
+	height: 440px;
+}
+div.day_map img {
+	-moz-box-shadow: 0px 0px 0px #000;
+	-webkit-box-shadow: 0px 0px 0px #000;
+	box-shadow: 0px 0px 0px #000;
+}
+div.post object {
+	display: block;
+	margin: 0 auto;
+}
+div.post p {
+	margin: 20px 0px;
 }
 /* End Post */
 
@@ -214,14 +231,15 @@ div.footer {
 /* World Map */
 body.map {
 	background: #1f1f21;
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
 }
 body.map ul.navlinks {
 	position: absolute;
 	top: 8px;
 	left: 80px;
-	margin: 0;
+	margin: 0px;
 	padding: 7px;
 	padding-left: 25px;
 	overflow: hidden;
@@ -230,12 +248,10 @@ body.map ul.navlinks {
 	z-index: -1;
 }
 body.map div.header {
-	position: relative;
 	top: 5px;
+	margin: 0px;
 	overflow: hidden;
-	z-index: 3;
-	padding: 3px 0px 0px 3px;
-	border-bottom: none;
+	width: 333px;
 }
 #world_map_canvas{
 	position: absolute;
