moved al posts to _posts, and added _includes

--- a/_includes/single_post.html
+++ b/_includes/single_post.html
@@ -1,8 +1,5 @@
----
-layout: default
----
 <div class='post'>
-	<h2>{{page.title}}</h2>
+	<h2><a href="{{page.url}}">{{page.title}}</a></h2>
 
 	<div class="data">
 		{% if page.kml %}
