re-organized layouts and includes, fixed single-post view

--- a/_includes/single_post.html
+++ b/_includes/single_post.html
@@ -12,6 +12,10 @@
 		{% endif %}
 	</div>
 	<div class="content">
-		{{page.content}}
+		{% if content %}
+			{{content}}
+		{% else %}
+			{{page.content}}
+		{% endif %}
 	</div>
 </div>
