--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,20 +1,4 @@
 ---
 layout: default
 ---
-<div class='post'>
-	<h2>{{page.title}}</h2>
-
-	<div class="data">
-		{% if page.kml %}
-			<div class="map" onclick="mapt(this,'{{page.kml}}')"></div>
-		{% endif %}
-
-		<div class="date">{{page.date | date: "%h %d, %Y"}}</div>
-		{% if page.author %}
-			<div class="author">by {{page.author}}</div>
-		{% endif %}
-	</div>
-	<div class="content">
-		{{page.content}}
-	</div>
-</div>
+{% include single_post.html %}
