updates to individual post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,4 +3,9 @@ layout: default
 scripts:
 - /js/maps.js
 ---
+<script type="text/javascript">
+	$(document).ready(function(){
+		$('.post a img').parent().lightBox();
+	});
+</script>
 {% include single_post.html %}
