--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,21 @@
 		{% for script in page.scripts %}
 		<script type="text/javascript" src="{{ script }}"></script>
 		{% endfor %}
+		<script type="text/javascript">
+			/* Google Analytics */
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-7120322-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+			 var ga = document.createElement('script'); 
+			 ga.type = 'text/javascript'; ga.async = true;
+			 ga.src = ('https:' == document.location.protocol ? 
+				 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			 var s = document.getElementsByTagName('script')[0]; 
+			 s.parentNode.insertBefore(ga, s);
+			 })();
+		</script>
 	</head>
 	<body>
 		<div class="header">
