added trip index, jekyll_ext for category generator, and folder -> categories for trips

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 				<img id="sitelogo" src="/images/logo.png"/>
 			</a>
 			<ul class="navlinks">
-				<li><a href="">Trips</a></li>
+				<li><a href="/trips/">Trips</a></li>
 				<li><a href="">Photos</a></li>
 				<li><a href="/map.html">Map</a></li>
 				<li><a href="/about.html">About</a></li>
