--- a/css/site.css
+++ b/css/site.css
@@ -11,6 +11,11 @@ body {
 img {
 	border: 0px;
 }
+ul {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
 
 div.pagecontent img {
 	display: block;
@@ -30,7 +35,7 @@ h1 {
 	color: #ffad33;
 	margin: 0px 0px 10px 0px;
 	padding: 0px;
-	font-size: 23px;
+	font-size: 25px;
 }
 h2 {
 	margin: 0px;
@@ -98,7 +103,7 @@ ul.navlinks {
 	background-color: #1f1f21;
 	z-index: -1;
 	padding: 7px 7px 7px 25px;
-	top: -12px;
+	top: 5px;
 	left: 80px;
 	list-style-type: none;
 	
@@ -116,11 +121,36 @@ ul.navlinks li {
 	font-weight: bold;
 }
 /* End Site Header */
-
-
 body div.pagecontent {
 	/*padding-top: 90px;*/
 }
+
+/* Trips */
+h2.year {
+	font-weight: bold;
+	font-size: 22px;
+	margin-top: 15px;
+	color: #888;
+}
+ul.triplist {
+	margin-left: 10px;
+	font-size: 20px;
+}
+ul.triplist li {
+	margin-bottom: 15px;
+}
+ul.triplist li a {
+	display: block;
+}
+ul.triplist li a img {
+	float: left;
+}
+ul.triplist li a div {
+	float: left;
+	margin-top: 25px; 
+	margin-left: 20px;
+}
+/* End Trips */
 
 /* Post */
 div.post {
