--- a/_includes/single_post.html
+++ b/_includes/single_post.html
@@ -5,10 +5,17 @@
 		{% if page.kml %}
 			<div class="map" onclick="mapt(this,'{{page.kml}}')"></div>
 		{% endif %}
-
 		<div class="date">{{page.date | date: "%h %d, %Y"}}</div>
 		{% if page.author %}
 			<div class="author">by {{page.author}}</div>
+		{% endif %}
+		{% if page.categories %}
+		<div class="categories">
+			Trip: 
+			{% for cat in page.categories %}
+				<a href="/trips/{{cat}}">{{cat}}</a>
+			{% endfor %}
+		</div>
 		{% endif %}
 	</div>
 	<div class="content">
