--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1> Trip &raquo; {{ page.category }} </h1>
+<h1> {{ page.category }} Posts</h1>
 <ul class="entrylist">
 	{% for post in site.categories[page.category] %}
 	<li> 
