--- a/css/jquery.lightbox-0.5.css
+++ b/css/jquery.lightbox-0.5.css
@@ -32,6 +32,10 @@
 #lightbox-container-image-box {
 	position: relative;
 	background-color: #000;
+	border-left: 2px solid #1f1f21;
+	border-right: 2px solid #1f1f21;
+	border-top: 2px solid #1f1f21;
+	border-bottom: 0px;
 	width: 250px;
 	height: 250px;
 	margin: 0 auto;
@@ -73,6 +77,10 @@
 #lightbox-container-image-data-box {
 	font: 10px Verdana, Helvetica, sans-serif;
 	background-color: #000;
+	border-top: 0px;
+	border-left: 2px solid #1f1f21;
+	border-right: 2px solid #1f1f21;
+	border-bottom: 2px solid #1f1f21;
 	margin: 0 auto;
 	line-height: 1.4em;
 	overflow: auto;
