updated background image

--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,6 @@
 body {
 	background-image: url('/images/background.png');
+	background-image: url('/images/background2.png');
 	background-color: #1f1f21;
 	width: 700px;
 	margin: 0 auto;
