layout and css updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,53 @@
 <html>
 	<head>
 		<title>{{page.title}}</title>
+		<!-- Feed -->
+		<link rel="alternate" type="application/atom+xml" title="Travelling Two" href="http://travel.throughnothing.com/atom.xml" /> 
+		<!-- Site CSS -->
 		<link rel="stylesheet" href="/css/site.css"/>
+		<!-- Lightbox CSS -->
 		<link rel="stylesheet" href="/css/jquery.lightbox-0.5.css"/>
+		<!-- Google Maps JS -->
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=US"></script>
+		<!-- Jquery from Google -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<!-- Jquery Lightbox -->
 		<script type="text/javascript" src="/js/jquery.lightbox-0.5.pack.js"></script>
 		{% for script in page.scripts %}
 		<script type="text/javascript" src="{{ script }}"></script>
 		{% endfor %}
+	</head>
+
+	<body>
+		<!-- Header Nav -->
+		<div class="header">
+			<a href="/">
+				<img id="sitelogo" src="/images/logo.png"/>
+			</a>
+			<ul class="navlinks">
+				<li {% if page.url contains 'trips/'%}class="cur"{%endif%}><a href="/trips/">Trips</a></li>
+				<li {%if page.url contains 'photos/'%}class="cur"{%endif%}><a href="">Photos</a></li>
+				<li><a href="/map.html">Map</a></li>
+				<li {%if page.url contains 'about.html'%}class="cur"{%endif%}><a href="/about.html">About</a></li>
+			</ul>
+			<span class="quote">"A journey is best measured in friends, rather than miles" <span> - Tim Cahill</span></span>
+		</div>
+		<!-- Header Nav End -->
+
+		<!-- Content -->
+		<div class="pagecontent">
+			{{content}}
+		</div>
+		<!-- Content End -->
+
+		<!-- Footer -->
+		<div class="footer">
+			<a href="/atom.xml">feed</a> :: <a href="/uncopyright.html">uncopyright</a> :: <a href="http://github.com/throughnothing/travel-blog">source</a>
+		</div>
+		<!-- Footer End -->
+
+
+		<!-- Google Analytics -->
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-19054234-1']);
@@ -25,23 +64,6 @@
 			 s.parentNode.insertBefore(ga, s);
 			})();
 		</script>
-	</head>
-	<body>
-		<div class="header">
-			<a href="/">
-				<img id="sitelogo" src="/images/logo.png"/>
-			</a>
-			<ul class="navlinks">
-				<li><a href="/trips/">Trips</a></li>
-				<li><a href="">Photos</a></li>
-				<li><a href="/map.html">Map</a></li>
-				<li><a href="/about.html">About</a></li>
-			</ul>
-			<span class="quote">"A journey is best measured in friends, rather than miles" <span> - Tim Cahill</span></span>
-		</div>
-		<div class="pagecontent">
-			{{content}}
-		</div>
-		<div class="footer">&nbsp;</div>
+		<!-- Google Analytics end -->
 	</body>
 </html>
