--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,11 +1,12 @@
 ---
 layout: default
+scripts:
+- /js/maps.js
 ---
-<h1> {{ page.category }} Posts</h1>
-<ul class="entrylist">
-	{% for post in site.categories[page.category] %}
-	<li> 
-		<a href="{{post.url}}">{{ post.title }}</a>
-	</li>
+<h1> {{ page.category }}</h1>
+
+<p>&nbsp;</p>
+
+	{% for page in site.categories[page.category] %}
+		{% include single_post_header.html %}
 	{% endfor %}
-</ul>
