--- a/css/sites2.css
+++ b/css/sites2.css
@@ -1,11 +1,10 @@
 body {
-	background-image: url('/images/background.png');
-	background-color: #1f1f21;
+	background-color: #181818;
+	color: #D8D8D8;
 	width: 700px;
 	margin: 0 auto;
 	padding-top: 15px;
 	font: 16px Trebuchet, sans-serif;
-	color: #ddd;
 }
 
 img {
@@ -17,12 +16,18 @@ ul {
 	list-style-type: none;
 }
 
+div.pagecontent img {
+	display: block;
+	margin: 0 auto;
+}
+img.sitelogo {
+	z-index: 6;
+}
 em{
 	font-weight: bold;
 	font-style: italic;
 }
 h1 {
-	color: #ffad33;
 	margin: 0px 0px 10px 0px;
 	padding: 0px;
 	font-size: 25px;
@@ -33,16 +38,10 @@ h2 {
 	font-size: 20px;
 }
 a {
-	color: #8a8ae5;
+	color: #00A8D8;
 	text-decoration: none
 }
 a:hover {
-	color: #e55c00;
-	color: #bfb384;
-	color: #bfa384;
-	color: #d9860b;
-	color: #ff8000;
-	text-decoration: underline;
 }
 
 /* Site Header */
@@ -59,18 +58,12 @@ div.header span.quote {
 	font-size: 14px;
 	font-style: italic;
 	font-weight: bold;
-	color: #aaa;
-}
-img.sitelogo {
-	z-index: 6;
 }
 span.quote span {
 	font-size: 11px;
-	color: #3f3f43
 }
 ul.navlinks {
 	position: absolute;
-	background-color: #1f1f21;
 	z-index: -1;
 	padding: 7px 7px 7px 25px;
 	top: 5px;
@@ -81,44 +74,18 @@ ul.navlinks {
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 
-	-moz-box-shadow: 0px 0px 10px #111;
+	/*-moz-box-shadow: 0px 0px 10px #111;
 	-webkit-box-shadow: 0px 0px 10px #111;
-	box-shadow: 0px 0px 10px #111;
+	box-shadow: 0px 0px 10px #111;*/
 }
 ul.navlinks li {
 	float: left;
 	margin-right: 20px;
-}
-ul.navlinks li.cur a {
 	font-weight: bold;
-	color: #ff8000;
 }
 /* End Site Header */
-
-/* Home Page */
-#images {
-	overflow: hidden;
-	margin-bottom: 20px;
-}
-#images li {
-	float: left;
-}
-#images img {
-	border: 1px solid #000;;
-	margin-left: 7px;
-	-moz-box-shadow: 0px 0px 0px #000;
-	-webkit-box-shadow: 0px 0px 0px #000;
-	box-shadow: 0px 0px 0px #000;
-}
-/* End Home Page */
-
-div.pagecontent img {
-	display: block;
-	margin: 0 auto;
-	border: 2px solid #000;
-	-moz-box-shadow: 0px 0px 10px #000;
-	-webkit-box-shadow: 0px 0px 10px #000;
-	box-shadow: 0px 0px 10px #000;
+body div.pagecontent {
+	/*padding-top: 90px;*/
 }
 
 /* Trips */
@@ -126,16 +93,13 @@ h2.year {
 	font-weight: bold;
 	font-size: 22px;
 	margin-top: 15px;
-	color: #888;
 }
 ul.triplist {
 	margin-left: 23px;
 	font-size: 20px;
 }
 ul.triplist li {
-	margin-top: 10px;
 	margin-bottom: 15px;
-	overflow: hidden;
 }
 ul.triplist li a {
 	display: block;
@@ -159,51 +123,19 @@ ul.entrylist li {
 /* End Trips */
 
 /* Post */
-ul.posts li {
-	font-size: 16px;
-	margin-bottom: 5px;
-}
-ul.posts li span{
-	color: #888;
-}
-ul.posts li a {
-	color: #ffad33;
-}
-ul.posts span.map {
-	width: 22px;
-	padding: 11px;
-	background: url('/images/map_icon.png') no-repeat;
-	background-position: 3px 12px;
-}
-
 div.post {
 	clear: both;
 }
 div.post h2 {
 	font-size: 22px;
-	color: #ffad33;
 }
 div.post h2 a {
+	color: #575721;
 	margin: 0px;
 	padding: 0px;
 	font-size: 22px;
-	color: #8ae5b8;
-	color: #2db259;
-	color: #2a8c2a;
-	color: #c1e58a;
-	color: #E0BD11;
-	color: #edc600;
-	color: #e59317;
-	color: #ffad33;
-}
-div.title_list {
-	margin-bottom: 50px;
-}
-div.title_list h2 a{
-	font-size: 17px;
 }
 div.post div.content {
-	padding-top: 3px;
 	clear: both;
 }
 div.post div.content:first-letter {
@@ -227,19 +159,16 @@ div.post div.data div.date {
 }
 div.post div.data div.author {
 	float: left;
-	margin-left: 2px;
+	margin-left: 10px;
 	font-weight: bold;
-	color: #888;
 }
 div.post div.data div.map {
-	color: #F25223;
-	color: #ff7519;
 	cursor: pointer;
 	width: 22px;
 	height: 20px;
 	float: left;
-	margin-top: 0px;
-	margin-left: 8px;
+	margin-top: -22px;
+	margin-left: -21px;
 	background: url('/images/map_icon.png') no-repeat;
 }
 div.post div.data div.bw {
@@ -259,9 +188,6 @@ div.day_map {
 	height: 440px;
 }
 div.day_map img {
-	-moz-box-shadow: 0px 0px 0px #000;
-	-webkit-box-shadow: 0px 0px 0px #000;
-	box-shadow: 0px 0px 0px #000;
 }
 div.post object {
 	display: block;
@@ -280,10 +206,8 @@ div.pagination {
 	margin-right: auto;
 	font: 12px;
 	font-weight: bold;
-	color: #ff7500;
 }
 div.pagination a {
-	color: #777;
 }
 div.pagination span.prev {
 	float: left;
@@ -295,17 +219,7 @@ div.pagination span.next {
 
 /* Footer */
 div.footer {
-	clear: both;
-	text-align: center;
-	font-size: 11px;
-	border-top: 1px dashed #555;
-	padding-top: 10px;
-	margin-top: 50px;
 	padding-bottom: 50px;
-	color: #777;
-}
-div.footer a {
-	color: #888;
 }
 /* End Footer */
 
@@ -324,7 +238,6 @@ body.map ul.navlinks {
 	padding: 7px;
 	padding-left: 25px;
 	overflow: hidden;
-	background-color: #1f1f21;
 	float: left;
 	z-index: -1;
 }
