--- a/css/site.css
+++ b/css/site.css
@@ -96,14 +96,14 @@ ul.navlinks li.cur a {
 /* End Site Header */
 
 /* Home Page */
-#images {
+#hp_images {
 	overflow: hidden;
 	margin-bottom: 20px;
 }
-#images li {
+#hp_images li {
 	float: left;
 }
-#images img {
+#hp_images img {
 	border: 1px solid #000;;
 	margin-left: 7px;
 	-moz-box-shadow: 0px 0px 0px #000;
@@ -169,7 +169,7 @@ ul.posts li span{
 ul.posts li a {
 	color: #ffad33;
 }
-ul.posts span.map {
+ul.posts a.map {
 	width: 22px;
 	padding: 11px;
 	background: url('/images/map_icon.png') no-repeat;
