--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=US"></script>
 		<!-- Jquery from Google -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<!-- Quotes JS -->
+		<script type="text/javascript" src="/js/quotes.js"></script>
 		<!-- Jquery Lightbox -->
 		<script type="text/javascript" src="/js/jquery.lightbox-0.5.pack.js"></script>
 		{% for script in page.scripts %}
