--- a/css/site.css
+++ b/css/site.css
@@ -257,6 +257,7 @@ div.day_map_wrap {
 	clear: both;
 	overflow: hidden;
 	padding-top: 10px;
+	color: #222;
 }
 div.day_map {
 	clear: both;
@@ -346,11 +347,12 @@ body.map div.header {
 	width: 100%;
 	height: 100%;
 	z-index: -1;
+	color: #222;
 }
 /* End World Map */
 /* Google Maps Styles */
 div.gmnoprint img {
 	display: block;
-	margin: 0 auto;
+	margin: 10px auto;
 }
 /* End Google Maps Styles */
