--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,7 @@ body {
 	width: 100%;
 	margin: 0;
 	padding-top: 15px;
-	font: 14px Trebuchet, sans-serif;
+	font: 16px Trebuchet, sans-serif;
 	color: #ddd;
 }
 div.width {
@@ -18,6 +18,10 @@ ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+}
+ul.normal {
+	margin-left: 15px;
+	list-style-type: circle;
 }
 
 em{
@@ -92,9 +96,9 @@ ul.navlinks {
 ul.navlinks li {
 	float: left;
 	margin-right: 20px;
+	font-weight: bold;
 }
 ul.navlinks li.cur a {
-	font-weight: bold;
 	color: #ff8000;
 }
 /* End Site Header */
@@ -102,7 +106,7 @@ ul.navlinks li.cur a {
 /* Home Page */
 #hp_images {
 	overflow: hidden;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 }
 #hp_images li {
 	float: left;
@@ -166,14 +170,24 @@ ul.entrylist li {
 
 /* Post */
 ul.posts li {
-	font-size: 14px;
-	margin-bottom: 5px;
+	font-size: 16px;
+	margin-bottom: 18px;
 }
 ul.posts li span{
-	color: #888;
+	font-size: 12px;
+	font-weight: bold;
+	color: #777;
 }
 ul.posts li a {
 	color: #ffad33;
+}
+ul.posts div.categories {
+	font-size: 10px;
+	font-weight: bold;
+	margin-left: 104px;
+}
+ul.posts div.categories a {
+	color: #8a8ae5;
 }
 ul.posts a.map {
 	padding: 0 11px;
@@ -281,12 +295,14 @@ div.post p {
 /* Pagination */
 div.pagination {
 	width: 100%;
-	margin-top: 40px;
+	margin-top: 50px;
 	margin-left: auto;
 	margin-right: auto;
-	font: 12px;
+	margin-bottom: -30px;
+	font-size: 14px;
 	font-weight: bold;
 	color: #ff7500;
+	overflow: hidden;
 }
 div.pagination a {
 	color: #777;
