fixed navlinks on maps page, updated todo

--- a/_layouts/world_map.html
+++ b/_layouts/world_map.html
@@ -16,11 +16,11 @@
 			<a href="/">
 				<img id="sitelogo" src="/images/logo.png"/>
 			</a>
-			<ul class="navlinks">
-				<li><a href="">Trips</a></li>
-				<li><a href="">Photos</a></li>
-				<li><a href="/about.html">About</a></li>
-			</ul>
+				<ul class="navlinks">
+					<li><a href="/trips/">Trips</a></li>
+					<li><a href="">Photos</a></li>
+					<li><a href="/about.html">About</a></li>
+				</ul>
 		</div>
 		<div id="world_map_canvas"></div>
 	</body>
