--- a/css/site.css
+++ b/css/site.css
@@ -111,14 +111,22 @@ ul.navlinks li.cur a {
 #hp_images li {
 	float: left;
 	width: 87px;
-	height: 77px;
+	height: 87px;
 }
 #hp_images img {
+	margin-top: 5px;
 	border: 1px solid #000;;
 	margin-left: 7px;
 	-moz-box-shadow: 0px 0px 0px #000;
 	-webkit-box-shadow: 0px 0px 0px #000;
 	box-shadow: 0px 0px 0px #000;
+}
+#hp_images img:hover {
+	border: 1px solid #444;
+	margin-left: 7px;
+	-moz-box-shadow: 0px 0px 5px #777;
+	-webkit-box-shadow: 0px 0px 5px #777;
+	box-shadow: 0px 0px 5px #777;
 }
 /* End Home Page */
 
