broke out lightbox stuff and post listing to includes to make templates cleaner

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,7 @@ layout: default
 scripts:
 - /js/maps.js
 ---
-<script type="text/javascript">
-	$(document).ready(function(){
-			$('.post a img').parent().lightBox({
-				overlayBgColor: '#000',
-				overlayOpacity: 0.9,
-				containerResizeSpeed: 450,
-				txtImage: 'Photo',
-   });
-	});
-</script>
+{% assign selector = '.post a img' %}
+{% include lightbox.html %}
+
 {% include single_post.html %}
