--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -7,6 +7,23 @@ scripts:
 
 <p>&nbsp;</p>
 
-	{% for page in site.categories[page.category] %}
-		{% include single_post_header.html %}
-	{% endfor %}
+<ul class='posts'>
+{% for page in site.categories[page.category] %}
+	<li>
+		<span>{{ page.date | date: "%h %d, %Y"}}</span> 
+		&raquo; 
+		{% if page.kml %}
+		<a target="_new" href="/map.html#{{ page.date | date: "%Y-%m-%d" }}" alt="Day Map" class="map"></a>
+		{% endif %}
+		<a href="{{ page.url }}">{{ page.title }}</a>
+		{% if page.categories != empty %}
+		<div class="categories">
+			Trip: 
+			{% for cat in page.categories %}
+				<a href="/trips/{{cat}}">{{cat}}</a>
+			{% endfor %}
+		</div>
+		{% endif %}
+	</li>
+{% endfor %}
+</ul>
