updating blog footer links

--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -12,7 +12,7 @@
 		</div>
     {{content}}
 		<div class="footer">
-			<a href="/atom.xml">feed</a>	:: <a href="">uncopyright</a> :: <a href="">source</a>
+			<a href="/atom.xml">feed</a>	:: <a href="/uncopyright.html">uncopyright</a> :: <a href="http://github.com/throughnothing/throughnothing.com/tree/master/blog/">source</a>
 		</div>
 	</body>
 </html>
