updated source link on travel blog

--- a/travel/_layouts/default.html
+++ b/travel/_layouts/default.html
@@ -47,7 +47,7 @@
 
 			<!-- Footer -->
 			<div class="footer">
-        <a href="/atom.xml">feed</a> :: <a href="/uncopyright.html">uncopyright</a> :: <a href="http://github.com/throughnothing/travel-blog">source</a>
+        <a href="/atom.xml">feed</a> :: <a href="/uncopyright.html">uncopyright</a> :: <a href="http://github.com/throughnothing/throughnothing.com/tree/master/travel/">source</a>
 			</div>
 			<!-- Footer End -->
 		</div>
