--- a/blog/css/site.css
+++ b/blog/css/site.css
@@ -2,7 +2,7 @@ body {
 	letter-spacing: 1px;
 	line-height: 20px;
 	font-family: Helvetica, Trebuchet, Arial, serif;
-	font-size: 18px;
+	font-size: 16px;
 	margin: 60px auto;
 	width: 700px;
 	background-color: #1f1f21;
@@ -18,8 +18,10 @@ h1 {
 	line-height: 25px;
 }
 h2 {
-	font-variant: small-caps;
-	color: #999;
+}
+h2 a {
+	color: #888;
+	text-decoration: none;
 }
 a { 
 	color: #aaa;
@@ -36,7 +38,16 @@ ul {
 em {
 	font-weight: bold;
 }
+div.date {
+	position: absolute;
+	top: 0px;
+	left: -100px;
+	font-size: 13px;
+	color: #555;
+	font-weight: bold;
+}
 div.post {
+	position: relative;
 	margin-bottom: 70px;
 }
 div.post img {
@@ -64,4 +75,9 @@ div.footer {
 }
 div.footer a {
 	color: #666;	
+	text-decoration: none;
+}
+div.footer a:hover {
+	color: #aaa;	
+	text-decoration: underline;
 }
