add google analytics to blog

--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -14,5 +14,14 @@
 		<div class="footer">
 			<a href="/atom.xml">feed</a>	:: <a href="/uncopyright.html">uncopyright</a> :: <a href="http://github.com/throughnothing/throughnothing.com/tree/master/blog/">source</a>
 		</div>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-19217851-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'http
+    </script>
 	</body>
 </html>
