added css for blockquote

--- a/blog/css/site.css
+++ b/blog/css/site.css
@@ -38,6 +38,10 @@ ul {
 em {
 	font-weight: bold;
 }
+blockquote{
+  font-style: italic;
+  color: #aaa;
+}
 div.date {
 	position: absolute;
 	top: 0px;
