added pagination to blog

--- a/blog/css/site.css
+++ b/blog/css/site.css
@@ -85,3 +85,6 @@ div.footer a:hover {
 	color: #aaa;	
 	text-decoration: underline;
 }
+div.pagination { overflow: hidden;}
+div.pagination span.prev { float: left; }
+div.pagination span.next { float: right; }
