initial add of photos page...nothing there yet

--- a/travel/_layouts/default.html
+++ b/travel/_layouts/default.html
@@ -31,7 +31,7 @@
 				</a>
 				<ul class="navlinks">
 					<li {% if page.url contains 'trips/'%}class="cur"{%endif%}><a href="/trips/">Trips</a></li>
-					<li {%if page.url contains 'photos/'%}class="cur"{%endif%}><a href="">Photos</a></li>
+					<li {%if page.url contains 'photos'%}class="cur"{%endif%}><a href="/photos.html">Photos</a></li>
 					<li><a href="/map.html">Map</a></li>
 					<li {%if page.url contains 'about.html'%}class="cur"{%endif%}><a href="/about.html">About</a></li>
 				</ul>
