--- a/travel/_layouts/default.html
+++ b/travel/_layouts/default.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="/css/site.css"/>
 		<!-- Lightbox CSS -->
 		<link rel="stylesheet" href="/css/jquery.lightbox-0.5.css"/>
+		{% for css in page.css %}
+		<link rel="stylesheet" href="{{ css }}"></script>
+		{% endfor %}
 		<!-- Google Maps JS -->
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=US"></script>
 		<!-- Jquery from Google -->
