--- a/travel/css/site.css
+++ b/travel/css/site.css
@@ -40,6 +40,7 @@ h2 {
   margin: 0px;
   padding: 0px;
   font-size: 20px;
+  clear: both;
 }
 a {
   color: #888;
@@ -183,6 +184,34 @@ ul.entrylist li {
 }
 /* End Trips */
 
+/* Photos */
+ul.triplist_photos{
+  margin-left: 10px;
+  padding-left: 10px;
+  list-style-type: disc;
+  overflow: hidden;
+}
+ul.triplist_photos li {
+  float: left;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+ul.photoset{
+}
+ul.photoset li{
+}
+div#slideshow {
+  width: 640px;
+  height: 425px;
+  margin: 10px auto 20px auto;
+  -moz-box-shadow: 0px 0px 14px #000;
+  -webkit-box-shadow: 0px 0px 14px #000;
+  box-shadow: 0px 0px 14px #000;
+}
+div#slideshow img {
+}
+/* End Photos */
+
 /* Post */
 ul.posts li {
   font-size: 19px;
@@ -205,10 +234,11 @@ ul.posts div.categories {
   margin-left: 104px;
 }
 ul.posts a.map {
-  padding: 0 11px;
+  padding: 2px 11px;
   background: url('/images/map_icon.png') no-repeat;
-  background-position: 4px 4px;
-  margin-left: -4px;
+  background-position: 2px 0px;
+  color: #4DAB55;
+  font-size: 12px;
 }
 span.fl {
   font-size: 44px;
