--- a/travel/_includes/single_post.html
+++ b/travel/_includes/single_post.html
@@ -3,7 +3,8 @@
 	<div class="data">
 		<div class="date">{{page.date | date: "%h %d, %Y"}}</div>
 		{% if page.kml %}
-			<div class="map" onclick="mapt(this,'{{page.kml}}')"></div>
+      <script>$(document).ready(function(){mapt($('.map'));});</script>
+			<div class="map"></div>
 		{% endif %}
 		{% if page.author %}
 			<div class="author">by {{page.author}}</div>
