--- a/travel/css/site.css
+++ b/travel/css/site.css
@@ -309,7 +309,7 @@ div.post div.data div.map {
   float: left;
   margin-top: 0px;
   margin-left: 8px;
-  background: url('/images/map_icon.png') no-repeat;
+  /*background: url('/images/map_icon.png') no-repeat;*/
 }
 div.post div.data div.bw {
   background: url('/images/earth-smallbw.png') no-repeat;
