--- a/travel/_includes/single_post.html
+++ b/travel/_includes/single_post.html
@@ -25,4 +25,20 @@
 			{{page.content}}
 		{% endif %}
 	</div>
+  <div class="nextPrevPosts">
+    {% if page.previous %}
+    <span class="prev-post">
+      <a rel="prev" href="{{ page.previous.url }}/" 
+        title="View {{ page.previous.title }}"
+        >&larr; {{page.previous.title}}</a>
+    </span>
+    {% endif %}
+    {% if page.next %}
+    <span class="next-post">
+      <a rel="next" href="{{ page.next.url }}/" 
+        title="View {{ page.next.title }}"
+        >{{page.next.title}}&rarr;</a>
+    </span>
+    {% endif %}
+  </div>
 </div>
