--- a/photos/css/site.css
+++ b/photos/css/site.css
@@ -7,37 +7,14 @@ body {
 	font-variant: small-caps;
 	margin: 60px auto;
 	width: 800px;
-	background-color: #1f1f21;
-	color: #777;
+	background-color: #FFF;
+	color: #444;
 }
 a { 
-	color: #bbb;
+	color: #ED6400;
 	text-decoration: none;
 }
 a:hover { 
-	color: #e55c00;
+	color: #999;
 	text-decoration: underline;
-}
-
-div.text { 
-	letter-spacing: 2px;
-	line-height: 24px;
-	font-variant: normal;
-	text-align: left;
-	font-size: 18px;
-}
-ul { 
-	padding: 0;
-	margin: 0 0 0 20px;
-	list-style-type: square;
-	color: #444;
-}
-h1 {
-	text-align: center;
-	font-variant: small-caps;
-	color: #aaa;
-	margin: 0;
-	padding: 0;
-	font-size: 32px;
-	line-height: 25px;
 }
